--- a/goSellSDK/UI/Resources/TapNavigationView.xib
+++ b/goSellSDK/UI/Resources/TapNavigationView.xib
@@ -13,11 +13,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TapNavigationView" customModule="goSellSDK">
             <connections>
                 <outlet property="backButton" destination="a4n-AJ-EsN" id="jpM-lg-O9N"/>
-                <outlet property="iconHolderWidthConstraintWhenIconAvailable" destination="Dbl-oF-Q3U" id="y7y-xe-mSk"/>
-                <outlet property="iconHolderWidthConstraintWhenIconUnavailable" destination="kxZ-uP-ute" id="DNx-3g-0h6"/>
                 <outlet property="iconImageView" destination="00R-Dh-mWp" id="OCc-i7-vfV"/>
+                <outlet property="iconViewHolder" destination="Cza-1c-Tw7" id="4Mg-oC-8p8"/>
                 <outlet property="rightViewHolder" destination="LQb-WI-2tx" id="OPO-pr-tzF"/>
                 <outlet property="titleLabel" destination="rgh-Xg-Fz7" id="vxk-qF-OZ4"/>
+                <outletCollection property="constraintsToActivateWhenIconAvailable" destination="Dbl-oF-Q3U" collectionClass="NSMutableArray" id="n8g-R4-KJ4"/>
+                <outletCollection property="constraintsToDeactivateWhenIconAvailable" destination="kxZ-uP-ute" collectionClass="NSMutableArray" id="e9C-lk-QRP"/>
+                <outletCollection property="constraintsToDeactivateWhenRightViewAvailable" destination="LKQ-1e-bdr" collectionClass="NSMutableArray" id="dQ6-tv-oyw"/>
+                <outletCollection property="constraintsToDeactivateWhenRightViewAvailable" destination="VLM-dN-YYT" collectionClass="NSMutableArray" id="qjv-rW-OeB"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -28,10 +31,10 @@
                 <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQg-Ba-y3u">
                     <rect key="frame" x="0.0" y="20" width="375" height="66"/>
                     <subviews>
-                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cza-1c-Tw7">
+                        <view clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cza-1c-Tw7">
                             <rect key="frame" x="45" y="13" width="0.0" height="40"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="00R-Dh-mWp">
+                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="00R-Dh-mWp">
                                     <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="3pu-Dr-pJR"/>
@@ -68,9 +71,13 @@
                                 <action selector="backButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="DYI-Ao-Ukx"/>
                             </connections>
                         </button>
-                        <view contentMode="scaleToFill" placeholderIntrinsicWidth="0.0" placeholderIntrinsicHeight="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="LQb-WI-2tx">
+                        <view hidden="YES" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" placeholderIntrinsicWidth="0.0" placeholderIntrinsicHeight="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="LQb-WI-2tx">
                             <rect key="frame" x="375" y="33" width="0.0" height="0.0"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" id="LKQ-1e-bdr"/>
+                                <constraint firstAttribute="width" id="VLM-dN-YYT"/>
+                            </constraints>
                         </view>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
